Consolidate artifact creation under assemble